style.css
/* POPPINS FONT FAMILY */
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");

* {
  font-family: "Poppins", sans-serif;
 /* border: 2px solid red;*/
}

/*HEADER SECTION*/



header{
  display:flex;
  position: relative;
  background-color:#4b4bf0;
  height: 400px;
  
}

nav{
  display: flex;
  gap: 15px;
  align-items: flex-end ;
  position: absolute;
  right:0;
  order: 4;
  color: white;
  margin: 10px;
}

.nav-item {
  margin-right:40px;
  margin-top: 10px
}

.nav-item-active:hover{
  background-color: white;
  color:#4b4bf0;
  border-radius: 5px;
  padding: 5px 5px 5px 5px;
}

.header-image{
  position: absolute;
  top: 100px;
  right:0;
}

.header-text{
  position: absolute;
  left: 0;
  top: 100px;
}

nav > svg {
  padding-top: 4px;
}

h2{
  color: white;
}

p{
  color: white;
}

/*API SECTION*/

.api{
  display: flex;
  position: relative;
  margin-top:50px;
  height: 400px;
}

.api-heading{
  display: inline;
  margin-left: 50px;
}

.cards{
  display: flex;
  gap: 50px;
  justify-content: space-evenly;
  position: absolute;
  top: 150px;
  left: 50px;
}

.card-body{
  color: black;
}

.card-active{
  box-shadow: 5px 5px 5px 5px #888888;
  padding: 10px;
}

.card-head-active{
  color: #0000FF;
  background-color: snow;
}

.companies{
  display: flex;
  gap: 20px;
  margin-top: 20px;
  margin-left: 50px;
}

.company-items{
  color: black;
  font-weight: bolder;
  text-decoration: none;
}

h1{
  margin-left: 50px;
}

.blog-cards{
  display: flex;
  gap: 50px;
  justify-content: center;
}

.blog-card{
  display: flex;
  justify-content: center;
  gap:50px;
  box-shadow: 5px 5px 5px 5px #888888;
  padding: 10px;
}

